--- a/indexes.html
+++ b/indexes.html
@@ -404,7 +404,7 @@
 
         </div>
 
-        <h1 class="credit"> designed by <span> The WeBros </span> | all rights reserved! </h1>
+        <h1 class="credit"> designed by <span> PaPi </span> | all rights reserved! </h1>
 
     </section>
 
